deploy: 608408457cdbf091e5e7fa1ab3db6a93521571c1

--- a/intro.html
+++ b/intro.html
@@ -8,7 +8,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" /><meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Welcome! &#8212; Personal Page</title>
+    <title>Welcome! &#8212; Table of Contents</title>
   
   
   
@@ -150,7 +150,7 @@
   
   
   
-    <p class="title logo__title">Personal Page</p>
+    <p class="title logo__title">Table of Contents</p>
   
 </a></div>
         <div class="sidebar-primary-item">
