--- a/genindex.html
+++ b/genindex.html
@@ -7,7 +7,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; Personal Page</title>
+    <title>Index &#8212; Table of Contents</title>
   
   
   
@@ -148,7 +148,7 @@
   
   
   
-    <p class="title logo__title">Personal Page</p>
+    <p class="title logo__title">Table of Contents</p>
   
 </a></div>
         <div class="sidebar-primary-item">
