--- a/search.html
+++ b/search.html
@@ -6,7 +6,7 @@
 
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" /><title>Search - Personal Page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" /><title>Search - Table of Contents</title>
   
   
   
@@ -150,7 +150,7 @@
   
   
   
-    <p class="title logo__title">Personal Page</p>
+    <p class="title logo__title">Table of Contents</p>
   
 </a></div>
         <div class="sidebar-primary-item">
