--- a/CV/index.html
+++ b/CV/index.html
@@ -378,9 +378,9 @@ Source - https://stackoverflow.com/questions/39777166/display-pdf-image-in-markd
 Posted by Waylan, OP by Suneel Omrey, modified by community. See post 'Timeline' for change history
 Retrieved 2026-01-07, License - CC BY-SA 4.0
 -->
-<object data="THAMESAlexander_CV.pdf" type="application/pdf" width="100%" height="100%">
-    <embed src="THAMESAlexander_CV.pdf">
-        <p>This browser does not support PDFs. Please download the PDF to view it: <a href="THAMESAlexander_CV.pdf">Download PDF</a>.</p>
+<object data="/pdfs/THAMESAlexander_CV.pdf" type="application/pdf" width="100%" height="100%">
+    <embed src="/pdfs/THAMESAlexander_CV.pdf">
+        <p>This browser does not support PDFs. Please download the PDF to view it: <a href="/pdfs/THAMESAlexander_CV.pdf">Download PDF</a>.</p>
     </embed>
 </object>
 </section>
