--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     <script>var togglebuttonSelector = '.toggle, .admonition.dropdown';</script>
     <script>const THEBE_JS_URL = "https://unpkg.com/thebe@0.8.2/lib/index.js"; const thebe_selector = ".thebe,.cell"; const thebe_selector_input = "pre"; const thebe_selector_output = ".output, .cell_output"</script>
     <script>DOCUMENTATION_OPTIONS.pagename = 'index';</script>
+    <script src="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css"></script>
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
     <link rel="next" title="CV" href="CV/index.html" />
@@ -457,6 +458,10 @@ By Alexander Thames
   
   <div class="footer-item">
     
+<div class="extra_footer">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
+
+</div>
   </div>
   
 </div>
