--- a/search.html
+++ b/search.html
@@ -56,6 +56,7 @@
     <script>var togglebuttonSelector = '.toggle, .admonition.dropdown';</script>
     <script>const THEBE_JS_URL = "https://unpkg.com/thebe@0.8.2/lib/index.js"; const thebe_selector = ".thebe,.cell"; const thebe_selector_input = "pre"; const thebe_selector_output = ".output, .cell_output"</script>
     <script>DOCUMENTATION_OPTIONS.pagename = 'search';</script>
+    <script src="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css"></script>
   <script src="_static/searchtools.js"></script>
   <script src="_static/language_data.js"></script>
   <script src="searchindex.js"></script>
@@ -392,6 +393,10 @@ By Alexander Thames
   
   <div class="footer-item">
     
+<div class="extra_footer">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
+
+</div>
   </div>
   
 </div>
