deploy: 5e55ae11add56a700ce242a1444b4d71654ef16a

--- a/index.html
+++ b/index.html
@@ -421,10 +421,10 @@ document.write(`
 <ul class="simple">
 <li><p>Decision-Making under Deep Uncertainty</p></li>
 <li><p>Exploratory Modeling</p></li>
-<li><p>Natural-Human Systems</p></li>
-<li><p>Climate Change and its Impacts</p></li>
+<li><p>Natural-Human Systems/Climate Change and its Impacts</p></li>
 <li><p>Risk, especially from Natural Catastrophes and Hazards</p></li>
 <li><p>Numerical and Statistical Modeling, Physics-Based Simulation</p></li>
+<li><p>Data Science</p></li>
 </ul>
 </section>
 <section id="education">
